# simple_redis

./: .gitignore  CMakeLists.txt  README.md
Docker/: docker-compose.yml
cmake/: hiredis.cmake  redis-plus-plus.cmake  simple_logger.cmake
include/simple_redis/: basic.h  client.h  config.h  exceptions.h  fifo.h  hash.h  lifo.h  set.h
src/: basic.cpp  client.cpp  config.cpp  exceptions.cpp  fifo.cpp  hash.cpp  lifo.cpp  set.cpp
tests/: CMakeLists.txt  fiforedisclient_test.cpp  hashredisclient_test.cpp  liforedisclient_test.cpp  redisclient_test.cpp  redisconfig_test.cpp  redisfuncs_test.cpp  setredisclient_test.cpp  test_client.cpp  test_client_nomock.cpp  test_config.cpp  test_fifo.cpp  test_fifo_nomock.cpp  test_functions.cpp  test_hash.cpp  test_hash_nomock.cpp  test_lifo.cpp  test_lifo_nomock.cpp  test_set.cpp  test_set_nomock.cpp
